fix z-index bug

--- a/app/assets/stylesheets/components/main.scss
+++ b/app/assets/stylesheets/components/main.scss
@@ -5,8 +5,6 @@ $footer-height: 120px;
 	background: $white;
 	min-height: 100vh;
 	padding: 16px 24px;
-	position: relative;
-	z-index: -1;    
 }
 
 html {
